--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,17 +1,34 @@
-<div>
-    {{#each products}}
-    <div>
-        <p>Producto: {{this.title}}</p>
-        <p>Id: {{this.id}}</p>
-        <p>Descripcion: {{this.description}}</p>
-        <p>Codigo: {{this.code}}</p>
-        <p>Precio: {{this.price}}</p>
-        <p>Status: {{this.status}}</p>
-        <p>Categoria: {{this.category}}</p>
-        <p>Thumbnails: {{this.thumbnails}}</p>
-    </div>
-    {{/each}}
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <script src="/socket.io/socket.io.js"></script>
+</head>
+<body>
+    <h1>Lista de Productos</h1>
+    <ul id="product-list"></ul>
+
+    <script>
+        const socket = io();
+
+        function renderProducts(products) {
+            const productList = document.getElementById('product-list');
+            productList.innerHTML = '';
+            products.forEach(product => {
+                const li = document.createElement('li');
+                li.textContent = `${product.title} - ${product.description} - $${product.price}`;
+                productList.appendChild(li);
+            });
+        }
+
+        socket.on('updateProducts', (products) => {
+            renderProducts(products);
+        });
+    </script>
+</body>
+</html>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
